Crash when creating a new collection for light linking #109019

Closed
opened 2023-06-15 18:00:23 +02:00 by Lukas Tönne · 1 comment
Member

Blender Version
Broken: 3df2110abd

Short description of error
Hitting ASAN buffer overflow when clicking the "New" button in the light linking collection list.

Exact steps for others to reproduce the error

  1. Open Blender (unsaved default file)
  2. Enable Cycles
  3. Select a light, go to Object properties > Shading > Light Linking
  4. Click the "New" button to make a collection
**Blender Version** Broken: 3df2110abd03df8c4da094198d0907efaf95646c **Short description of error** Hitting ASAN buffer overflow when clicking the "New" button in the light linking collection list. **Exact steps for others to reproduce the error** 1. Open Blender (unsaved default file) 1. Enable Cycles 1. Select a light, go to Object properties > Shading > Light Linking 1. Click the "New" button to make a collection
Lukas Tönne added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-15 18:00:24 +02:00
Lukas Tönne added the
Module
Render & Cycles
label 2023-06-15 18:01:43 +02:00
Sergey Sharybin was assigned by Lukas Tönne 2023-06-15 18:06:33 +02:00
Lukas Tönne added this to the Render & Cycles project 2023-06-15 18:07:01 +02:00

Confirmed. And the operator for Shadow linking is similarly affected. Unsure which module is at fault here though... will keep under Cycles for now.

==24723==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x6040004dcd40 at pc 0x7fc9f103b397 bp 0x7ffe61bc3350 sp 0x7ffe61bc2af8
READ of size 64 at 0x6040004dcd40 thread T0
    #0 0x7fc9f103b396 in __interceptor_memcpy ../../../../src/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:827
    #1 0x4290483 in mywrite /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:564
    #2 0x42916d6 in writestruct_at_address_nr /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:691
    #3 0x429178f in writestruct_nr /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:697
    #4 0x429a65f in BLO_write_struct_by_id /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1651
    #5 0x124e982 in object_blend_write /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/object.cc:618
    #6 0x4298492 in write_file_handle /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1321
    #7 0x429a005 in BLO_write_file_mem /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1587
    #8 0xc6fd016 in BKE_memfile_undo_encode /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/blender_undo.cc:134
    #9 0xa2c6341 in memfile_undosys_step_encode /home/deadpin/source/blender-git/blender/source/blender/editors/undo/memfile_undo.cc:89

0x6040004dcd40 is located 0 bytes to the right of 48-byte region [0x6040004dcd10,0x6040004dcd40)
allocated by thread T0 here:
    #0 0x7fc9f10b5a37 in __interceptor_calloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:154
    #1 0x1be28193 in MEM_lockfree_callocN /home/deadpin/source/blender-git/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:208
    #2 0x4a4dfd0 in LightLinking* MEM_cnew<LightLinking>(char const*) /home/deadpin/source/blender-git/blender/intern/guardedalloc/MEM_guardedalloc.h:304
    #3 0xc7f1d86 in BKE_light_linking_collection_assign_only /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/light_linking.cc:100
    #4 0xc7f20fc in BKE_light_linking_collection_assign /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/light_linking.cc:130
    #5 0xc7f1be6 in BKE_light_linking_collection_new /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/light_linking.cc:83
    #6 0x9821209 in light_linking_collection_new_exec<(LightLinkingType)0> /home/deadpin/source/blender-git/blender/source/blender/editors/object/object_light_linking_ops.cc:40
Confirmed. And the operator for Shadow linking is similarly affected. Unsure which module is at fault here though... will keep under Cycles for now. ``` ==24723==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x6040004dcd40 at pc 0x7fc9f103b397 bp 0x7ffe61bc3350 sp 0x7ffe61bc2af8 READ of size 64 at 0x6040004dcd40 thread T0 #0 0x7fc9f103b396 in __interceptor_memcpy ../../../../src/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:827 #1 0x4290483 in mywrite /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:564 #2 0x42916d6 in writestruct_at_address_nr /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:691 #3 0x429178f in writestruct_nr /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:697 #4 0x429a65f in BLO_write_struct_by_id /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1651 #5 0x124e982 in object_blend_write /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/object.cc:618 #6 0x4298492 in write_file_handle /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1321 #7 0x429a005 in BLO_write_file_mem /home/deadpin/source/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1587 #8 0xc6fd016 in BKE_memfile_undo_encode /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/blender_undo.cc:134 #9 0xa2c6341 in memfile_undosys_step_encode /home/deadpin/source/blender-git/blender/source/blender/editors/undo/memfile_undo.cc:89 0x6040004dcd40 is located 0 bytes to the right of 48-byte region [0x6040004dcd10,0x6040004dcd40) allocated by thread T0 here: #0 0x7fc9f10b5a37 in __interceptor_calloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:154 #1 0x1be28193 in MEM_lockfree_callocN /home/deadpin/source/blender-git/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:208 #2 0x4a4dfd0 in LightLinking* MEM_cnew<LightLinking>(char const*) /home/deadpin/source/blender-git/blender/intern/guardedalloc/MEM_guardedalloc.h:304 #3 0xc7f1d86 in BKE_light_linking_collection_assign_only /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/light_linking.cc:100 #4 0xc7f20fc in BKE_light_linking_collection_assign /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/light_linking.cc:130 #5 0xc7f1be6 in BKE_light_linking_collection_new /home/deadpin/source/blender-git/blender/source/blender/blenkernel/intern/light_linking.cc:83 #6 0x9821209 in light_linking_collection_new_exec<(LightLinkingType)0> /home/deadpin/source/blender-git/blender/source/blender/editors/object/object_light_linking_ops.cc:40 ```
Jesse Yurkovich added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-15 21:14:37 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-16 10:33:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109019
No description provided.