Fix #109019: Crash when creating a new collection for light linking

A wrong DNA struct was used for writing light linking data.

Pull Request: https://projects.blender.org/blender/blender/pulls/109049